cloudsql/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-fe
  labels:
    name: wordpress
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    name: wordpress
    tier: frontend
