cloudsql/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wordpress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: wordpress
