cloudsql/wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
spec:
  backend:
    serviceName: svc-wordpress
    servicePort: 80
